# sealaser-galvo

./: .gitignore  PLAN.md  capture_list_cmds.py  capture_protocol.py  gconsole.py  pyproject.toml  rayforge-addon.yaml  test_lcs.py  test_sea_usb.py
bjjcz/: __init__.py  backend.py  coord.py  driver.py  encoder.py  galvo_config.py  lcs_api.py  sea_usb.py  usb.py
devices/gweike-g2/: device.yaml
sealaser_meerk40t/: __init__.py  controller.py  device.py  driver.py  plugin.py
tests/: conftest.py  hardware_movement.py  test_driver.py  test_encoder.py  test_usb.py
