[project]
name = "rayforge-addon-bjjcz"
version = "0.1.0"
description = "Rayforge addon: BJJCZ/JCZ LMC galvo laser driver (Gweike G2)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Miroslav Talasek", email = "miroslav.talasek@gmail.com"},
]
dependencies = [
    "galvoplotter",
    "pyusb",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[build-system]
requires = ["setuptools>=40.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bjjcz*"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
