[project]
name = "sealaser-galvo"
version = "0.1.0"
description = "Pure-USB protocol driver for BJJCZ/SEA-LASER galvo fiber laser controllers (Gweike G2)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Miroslav Talasek", email = "miroslav.talasek@gmail.com"},
]
dependencies = [
    "galvoplotter",
    "pyusb",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]
meerk40t = [
    "meerk40t",
]

[project.entry-points."meerk40t.extension"]
sealaser = "sealaser_meerk40t.plugin:plugin"

[build-system]
requires = ["setuptools>=40.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bjjcz*", "sealaser_meerk40t*"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
